--- a/pi/src/index.css
+++ b/pi/src/index.css
@@ -1,7 +1,204 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+::-webkit-scrollbar {
+  display: none;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
+
+
+
+#no {
+  background-color: #0e1516;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  -webkit-app-region: drag;
+}
+
+#cuadrado {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 670px;
+  height: 400px;
+  border-radius: 5px;
+  border: 1.5px solid #64B8CC;
+  background-color: #3068754A;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+#f {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+#formula {
+  position: relative;
+  -webkit-app-region: none;
+  background: rgba(255, 255, 255, 0);
+  font-family: Inria Serif;
+  color: #e8ecee;
+  width: 100px;
+  height: 115px;
+  border: none;
+  margin-right: 5px;
+  font-size: 100px;
+  outline: none;
+  max-width: 400px;
+}
+
+#max {
+  position: absolute;
+  top: 20%;
+  margin-left: 10px;
+}
+
+#min {
+  position: absolute;
+  bottom: 20%;
+  margin-left: -50px;
+}
+
+.selso {
+  -webkit-app-region: none;
+  background: rgba(255, 255, 255, 0);
+  font-family: Inria Serif;
+  color: #e8ecee;
+  font: i;
+  border: none;
+  font-size: 50px;
+  outline: none;
+  max-width: 400px;
+}
+
+#dx {
+  color: #FFF;
+  font-family: Inria Serif;
+  font-size: 125px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: normal;
+  margin-bottom: 15px
+  ;
+}
+
+#arriba {
+  position: absolute;
+  top: 7px;
+  width: 100%;
+    
+}
+
+#info {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left:97%;
+  bottom: -1%;
+}
+
+#abajo {
+  transform: translateX(-50%);
+  position: absolute;
+  bottom: 4px;
+  left: 50%;
+  color: rgba(100, 184, 204, 0.18);
+  text-align: center;
+  font-family: Lucida Console;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+#reloj {
+  transform: translate(-50%);
+  position: absolute;
+  left: 50%;
+  color: rgba(100, 184, 204, 0.18);
+  text-align: center;
+  font-family: Lucida Console;
+  font-size: 30px;
+  font-style: normal;
+  letter-spacing: -1px;
+  font-weight: 400;
+  line-height: normal;
+}
+#reloj::before {
+  
+  content: ':';
+  position: absolute;
+  bottom: 2px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 1;
+  animation: blink 1s step-end infinite;
+}
+  @keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+#menos{
+  transform: translatex(-50%);
+  position: absolute;
+  left: 93%;
+  top: 1px
+}
+
+#x {
+  transform: translatex(-50%);
+  position: absolute;
+  left: 97%;
+  top:-4px;
+}
+
+#sel {
+  width: 35px;
+  height: 35px;
+}
+
+#so {
+  width: 30px;
+  height: 25px;
+}
+
+
+#int {
+  position: relative;
+  display: flex;
+  bottom: 10px;
+  image-rendering: crisp-edges;
+}
+
+#aquila {
+  position: absolute;
+  transform: translateY(-50%);
+  rotate: -90deg;
+  top: 50%;
+  width: 70px;
+  height: 28px;
+  scale: 0.8;
+  opacity: 18%;
+}
+
+.tools {
+  scale: 0.8;
+  -webkit-app-region: none;
+}
+.tools:hover {
+  cursor: pointer;
+  filter: brightness(300%);
+}
+.tools:active {
+  scale: 0.6;
+}
+#info:active {
+  scale: 0.7  !important;
 }
